--- a/test.html
+++ b/test.html
@@ -16,7 +16,7 @@
 
 
 <body>
-        <iframe src="https://korynunn.github.io/scroll-into-view/example/">
+        <iframe src="https://korynunn.github.io/scroll-into-view/example/" style="position: relative; height: 100%; width: 100%;">
 
         </iframe>
 </body>
