--- a/test.html
+++ b/test.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 
-<html>
+<html style="height: 100%">
 
 <head>
 
@@ -15,7 +15,7 @@
 </head>
 
 
-<body>
+<body style="height: 100%">
         <iframe src="https://korynunn.github.io/scroll-into-view/example/">
 
         </iframe>
