--- a/about.html
+++ b/about.html
@@ -4,15 +4,8 @@ title: About
 permalink: /about/
 ---
 
-This is the base Jekyll theme. You can find out more info about customizing your Jekyll theme, as well as basic Jekyll usage documentation at [jekyllrb.com](https://jekyllrb.com/)
+"Your blog is notes to yourself. If somebody else is reading it, it is a good thing."
 
-You can find the source code for Minima at GitHub:
-[jekyll][jekyll-organization] /
-[minima](https://github.com/jekyll/minima)
+One of the many interesting definitions I read about what exactly a blog is. I guess this one is from Scott Hanselman. So If you are reading this, you have stumbled on my notes, and may be interested to know a little about me. I am Arun Kumar and I work for MOQ digital, Australia as an Azure Solution Architect.I am an ex-Microsoftie and used to work as an Architect at Microsoft. I have built Customer Care Framework and early versions of Customer Care Accelerator products for Microsoft. You can contact me at 
 
-You can find the source code for Jekyll at GitHub:
-[jekyll][jekyll-organization] /
-[jekyll](https://github.com/jekyll/jekyll)
-
-
-[jekyll-organization]: https://github.com/jekyll
+Views/Opinions expressed in this blog are my own and doesn't reflect the opinion of MOQ or any of my previous employer
