--- a/about.html
+++ b/about.html
@@ -10,7 +10,7 @@ background: 'https://source.unsplash.com/random/300x100'
 <p>One of the many interesting definitions I read about what exactly a blog is. I guess this one is from Scott Hanselman. So If you are reading this, you have stumbled on my notes, and may be interested to know a little about me. 
 </p>
 <p>
-I am Arun Kumar and I work for MOQ digital, Australia as an Azure Solution Architect.I am an ex-Microsoftie and used to work as an Architect at Microsoft. I have built Customer Care Framework and early versions of Customer Care Accelerator products for Microsoft. You can contact me at @ar_kumar on twitter
+I am Arun Kumar and I work for MOQ digital, Australia as an Azure Solution Architect.I am an ex-Microsoftie and used to work as an Architect at Microsoft. I have built Customer Care Framework and early versions of Customer Care Accelerator products for Microsoft. You can contact me at @ar_kumar on twitter or linkedin
 </p>
 <p>
 Views/Opinions expressed in this blog are my own and doesn't reflect the opinion of MOQ or any of my previous employer
