--- a/about.html
+++ b/about.html
@@ -2,7 +2,7 @@
 layout: page
 title: About
 permalink: /about/
-background: 'https://source.unsplash.com/random/300x100'
+background: '/uploads/about.jpeg'
 ---
 
 "Your blog is notes to yourself. If somebody else is reading it, it is a good thing."
