--- a/about.html
+++ b/about.html
@@ -5,12 +5,8 @@ permalink: /about/
 background: '/uploads/about.jpeg'
 ---
 
-"Your blog is notes to yourself. If somebody else is reading it, it is a good thing."
-
-<p>One of the many interesting definitions I read about what exactly a blog is. I guess this one is from Scott Hanselman. So If you are reading this, you have stumbled on my notes, and may be interested to know a little about me. 
-</p>
 <p>
-I am Arun Kumar and I work for MOQ digital, Australia as an Azure Solution Architect.I am an ex-Microsoftie and used to work as an Architect at Microsoft. I have built Customer Care Framework and early versions of Customer Care Accelerator products for Microsoft. You can contact me at @ar_kumar on twitter
+I am Arun Kumar and for the last 20 years I have been telling people that i can create software. To my surprise many people started believing it, other than my mom. Hence i have been wreaking havoc around the world with my copy paste programming skills and duct tape architecture. Microsoft mistakenly hired me in year 2006. After creating enough damage for different Microsoft customer and at Microsoft engineering division, i realised that, Microsoft might never realise their mistake. So, I decided to leave Microsoft in year 2016 and move to the beautiful country Australia. In Australia, people tend to buy my story that i can take them to cloud (not cloud nine, Azure, Microsoft Cloud). The latest of my victims is MOQ Digital, Brisbae. They are employing me as an Azure Solution Architect and i am continuing my journey there. If you are brave enough, even after reading this, you can contact me at @ar_kumar on twitter
 </p>
 <p>
 Views/Opinions expressed in this blog are my own and doesn't reflect the opinion of MOQ or any of my previous employer
